# pico-ice

./: .gitignore  .gitmodules  CNAME  LICENSE  README.md  _config.yml  pico_ice
.github/workflows/: pages.yml
Board/Rev0/: bom.ini  fp-info-cache  pico-ice.kicad_pcb  pico-ice.kicad_prl  pico-ice.kicad_pro  pico-ice.kicad_sch  pico-ice.sch
Board/Rev0/RP2040_minimal.pretty/: RP2040-QFN-56.kicad_mod
Board/Rev0/bom/: ibom.html
Board/Rev1/: bom.ini  fp-info-cache  pico-ice.kicad_pcb  pico-ice.kicad_prl  pico-ice.kicad_sch  pico-ice.xml  pico-ice_minimal.lib  sym-lib-table
Board/Rev1/Fabrication/: pico-ice-all-pos.csv  pico-ice.d356
Board/Rev1/bom/: BoM_pico-ice.csv  ibom.html
Board/Rev2/: fp-info-cache  pico-ice-cache.lib  pico-ice.kicad_pcb  pico-ice.kicad_prl  pico-ice.kicad_pro  pico-ice.kicad_sch  pico-ice.pro  pico-ice.xml
Board/Rev2/Fabrication/: pico-ice-all-pos.csv  pico-ice.d356
Board/Rev2/bom/: ibom.html
Board/Rev3/: fp-info-cache  fp-lib-table  ibom.config.ini  pico-ice-rescue.lib  pico-ice.kicad_pcb  pico-ice.kicad_prl  pico-ice.kicad_pro  pico-ice.kicad_sch  pico-ice.xml
Board/Rev3/CUSTOM.pretty/: LED_Cree-PLCC4_1x1mm_CW.kicad_mod  OSHW_Dual_0.1_Scale_2140.kicad_mod  PTS820J25KSMTRLFS.kicad_mod  Pb free logo.kicad_mod  WEEE logo.kicad_mod  tinyAI_logo.kicad_mod
Board/Rev3/RP2040_minimal.pretty/: OnSemi_XDFN4-1EP_1.0x1.0mm_EP0.52x0.52mm.kicad_mod  PinHeader_2x20_P2.54mm_Vertical_Left.kicad_mod  (+1 more)
Docs/: .gitignore  Doxyfile  DoxygenLayout.xml  LICENSE  _config.yml  c-header-to-sphinx.awk  conf.py  footer.html  getting_started.md  ice_cram.md  ice_flash.md  ice_fpga.md  ice_fpga_flash.md  ice_led.md  ice_sdk.md  ice_smem.md  ice_spi.md  ice_sram.md  ice_usb.md  index.md  index.rst  learn.md  mpy.md  pico_ice.drawio  pico_ice_sdk.md  pinout.md  pmods.md  programming_the_fpga.md  programming_the_mcu.md  uf2_tools.md  use_apio.md  using_apio.md  using_oss_cad_suite.md
Docs/hardware/: pinout.md  pinout.rst
Docs/images/: pico_ice.drawio  pico_ice_spi_debug.odp
Docs/pinout/: Makefile  data.py  debug_spi.odp  debug_spi_black.odp  debug_spi_white.odp  pinout_diagram.py  spi_bus_black.odp  spi_bus_white.odp  styles.css
Docs/software/: getting-started.md  getting-started.rst  ice_flash.md  ice_fpga.md  ice_sdk.md  ice_smem.md  ice_usb.md  pico_ice_flash.md  pico_ice_flash.rst  pico_ice_fpga.md  pico_ice_fpga.rst  pico_ice_sdk.rst  pico_ice_smem.rst  pico_ice_usb.rst  sdk-c-api.rst  uf2-tools.md  uf2-tools.rst
Docs/source/: conf.py  index.rst
Firmware/pico-ice-default/: CMakeLists.txt  README.md  main.c  pico-ice-sdk  pico-sdk  tusb_config.h  usb_descriptors.c
Firmware/pico-ice-default/include/: tusb_config.h
Firmware/pico-ice-default/src/: main.c  usb_descriptors.c
Firmware/pico-ice-test-jig/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  pico-ice.pcf  pico_ice_bitstream.dfu  top.sv  top.v
Firmware/pico-ice-test-jig-mpy/: flash_final.py  flash_final_rp2040.py  flash_final_rp2350.py  main.py  main_rp2040.py  main_rp2350.py  mfg_pico-ice.ps1  mfg_pico2-ice.ps1  pico2_ice.uf2  pico_ice.uf2  run_tests_rp2040.py  run_tests_rp2350.py  test_pico2_ice.bit  test_pico_ice.bit
Firmware/pico-ice-test-jig/include/: tusb_config.h
Firmware/pico-ice-test-jig/rtl/: Makefile  pico_ice.pcf  pico_ice_bitstream.dfu  top.sv
Firmware/pico-ice-test-jig/src/: main.c  usb_descriptors.c
Firmware/pico-ice-test-rig/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
Firmware/test_rig/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
rtl/sim/: Makefile
(+57 files in other folders)
